# parallel-systems-2014-2015

./: .gitignore  .gitmodules  README.md
Work1/: compare_methods.py
Work1/Cilk/: Makefile  data_rearrangement.c  datasets.c  general_functions.c  hash_codes.c  morton_encoding.c  radix_sort.c  test_octree.c  verification.c
Work1/OpenMP/: Makefile  data_rearrangement.c  datasets.c  hash_codes.c  lib.h  radix_sort.c  test_octree.c
Work1/Playground/: hello_world.c
Work1/Pthreads/: data_rearrangement.c  datasets.c  hash_codes.c  lib.h  morton_encoding.c  radix_sort.c
Work1/Pthreads_dynamic_depth/: data_rearrangement.c  test_octree.c
Work1/Serial/: Makefile  data_rearrangement.c  datasets.c  general_functions.c  hash_codes.c  morton_encoding.c  radix_sort.c  test_octree.c  verification.c
assignment-1/Cilk/: Makefile  data_rearrangement.c  datasets.c  hash_codes.c  morton_encoding.c  test_octree.c
assignment-1/OpenMP/: data_rearrangement.c  general_functions.c  hash_codes.c  lib.h  morton_encoding.c
assignment-1/Pthreads/: datasets.c
assignment-1/Serial/: datasets.c  morton_encoding.c
assignment-2/: .gitignore  experiment.py  handle_grid_results.py  handle_local_results.py
assignment-2/mpi/: .gitignore  Makefile  bitonic.c  grama_quicksort.c
assignment-2/serial/: Makefile  bitonic.c
assignment-3/: Makefile  codingstyle.sh  devInfo.cu  links
assignment-3/cpu/: Makefile  omp.c  test.c
assignment-3/cuda/: Makefile  cuda-int.c  cuda-int.cu  cuda.cu  cuda2.c
assignment-3/doc/: Doxyfile
assignment-3/init/: generate_table.c  read_table.c
assignment-3/serial/: Makefile  omp.c  test.c
assignment-3/tests/: checksum_tester.py  script.py  simple_formation.c  test_conv.cu
assignment-3/utils/: generate_table.c  generic_functions.c  read_table.c  utils.c  utils.h
mpi_bitonic_sort/: Makefile  experiment.py  handle_local_results.py
mpi_bitonic_sort/mpi/: bitonic.c  grama_quicksort.c  utils.h
mpi_bitonic_sort/serial/: Makefile  bitonic.c
pagerank-pthreads/: CMakeLists.txt  list2matrix.c  parser.c  utils.c  utils.h
pagerank-pthreads/include/pagerank-pthreads/: utils.h
pagerank-pthreads/src/: parser.c  utils.c
pagerank-pthreads/test/: CMakeLists.txt  parser_test.c
pagerank_pthreads/: CMakeLists.txt
pagerank_pthreads/include/pagerank_pthreads/: defines.h  pagerank_pthreads.h  pagerank_single.h  utils.h
pagerank_pthreads/src/: main.c  pagerank_pthreads.c  pagerank_single.c  parser.c  single-pr.c  utils.c
pagerank_pthreads/test/: CMakeLists.txt  example-matrix.txt  example-matrix2.txt  pagerank_single_test.c  parser_test.c
parallel_radix_octree/: compare_methods.py
parallel_radix_octree/Cilk/: general_functions.c  radix_sort.c
parallel_radix_octree/OpenMP/: radix_sort.c  test_octree.c
parallel_radix_octree/Pthreads/: Makefile  hash_codes.c  radix_sort.c  test_octree.c
parallel_radix_octree/Pthreads_dynamic_depth/: morton_encoding.c
parallel_radix_octree/Serial/: hash_codes.c
